--- a/docs/topics/3.8-announcement.md
+++ b/docs/topics/3.8-announcement.md
@@ -19,9 +19,8 @@
 
 # Django REST framework 3.8
 
-TODO
-
-The 3.8 release ...
+The 3.8 release is a maintenance focused release resolving a large number of previously outstanding issues and laying
+the foundations for future changes.
 
 ---
 
@@ -33,18 +32,17 @@ If you use REST framework commercially and would like to see this work continue,
 
 *We'd like to say thanks in particular our premium backers, [Rover](http://jobs.rover.com/), [Sentry](https://getsentry.com/welcome/), [Stream](https://getstream.io/?utm_source=drf&utm_medium=banner&utm_campaign=drf), [Machinalis](https://hello.machinalis.co.uk/), and [Rollbar](https://rollbar.com).*
 
-
 ---
 
 ## Breaking Changes
 
-### Altered behaviour of `read_only` plus `default` on Field.
+### Altered the behaviour of `read_only` plus `default` on Field.
 
-[#5886][gh5886]
+[#5886][gh5886] `read_only` fields will now **always** be excluded from writable fields.
 
-`read_only` fields will now **always** be excluded from writable fields.
-
-Previously `read_only` fields with a `default` value would use the `default` for create and update operations.
+Previously `read_only` fields when combined with a `default` value would use the `default` for create and update
+operations. This was counter-intuitive in some circumstances and led to difficulties supporting dotted `source`
+attributes on nullable relations.
 
 In order to maintain the old behaviour you may need to pass the value of `read_only` fields when calling `save()` in
 the view:
@@ -54,33 +52,6 @@ the view:
 
 Alternatively you may override `save()` or `create()` or `update()` on the serialiser as appropriate.
 
-
----
-
-## Boolean Composable Permissions
-
-TODO
-
----
-
-
-## Namespace Support
-
-TODO
-
-
----
-
-## Viewset actions
-
-TODO:
-
----
-
-## Minor fixes and improvements
-
-There are a large number of minor fixes and improvements in this release. See the [release notes](release-notes.md) page for a complete listing.
-
 ---
 
 ## Deprecations
@@ -88,6 +59,12 @@ There are a large number of minor fixes and improvements in this release. See th
 TODO
 
 ---
+
+## Minor fixes and improvements
+
+There are a large number of minor fixes and improvements in this release. See the [release notes](release-notes.md) page
+for a complete listing.
+
 
 ## What's next
 
