--- a/docs/topics/3.8-announcement.md
+++ b/docs/topics/3.8-announcement.md
@@ -56,7 +56,26 @@ Alternatively you may override `save()` or `create()` or `update()` on the seria
 
 ## Deprecations
 
-TODO
+### `action` decorator replaces `list_route` and `detail_route`
+
+[#5705][gh5705] `list_route` and `detail_route` have been merge into a single `action` decorator. This improves viewset action introspection, and will allow extra actions to be displayed in the Browsable API in future versions.
+
+Both `list_route` and `detail_route` are now pending deprecation. They will be deprecated in 3.9 and removed entirely
+in 3.10.
+
+The new `action` decorator takes a boolean `detail` argument.
+
+* Replace `detail_route` uses with `@action(detail=True)`.
+* Replace `list_route` uses with `@action(detail=False)`.
+
+
+### `exclude_from_schema`
+
+Both `APIView.exclude_from_schema` and the `exclude_from_schema` argument to the `@api_view` decorator are now deprecated. They will be removed entirely in 3.9.
+
+For `APIView` you should instead set a `schema = None` attribute on the view class.
+
+For function based views the `@schema` decorator can be used to exclude the view from the schema, by using `@schema(None)`.
 
 ---
 
@@ -72,3 +91,5 @@ TODO
 
 [funding]: funding.md
 [gh5886]: https://github.com/encode/django-rest-framework/issues/5886
+[gh5705]: https://github.com/encode/django-rest-framework/issues/5705
+
