update docs to use re_path() instead of url(r...

--- a/docs/community/3.5-announcement.md
+++ b/docs/community/3.5-announcement.md
@@ -69,7 +69,7 @@ schema_view = get_schema_view(
 )
 
 urlpatterns = [
-    url(r'^swagger/$', schema_view),
+    re_path(r'^swagger/$', schema_view),
     ...
 ]
 ```
@@ -199,7 +199,7 @@ Make sure to include the view before your router urls. For example:
 
     urlpatterns = [
         url('^$', schema_view),
-        url(r'^', include(router.urls)),
+        re_path(r'^', include(router.urls)),
     ]
 
 ### Schema path representations
