update some examples to path() instead of re_path

--- a/docs/community/3.5-announcement.md
+++ b/docs/community/3.5-announcement.md
@@ -199,7 +199,7 @@ Make sure to include the view before your router urls. For example:
 
     urlpatterns = [
         url('^$', schema_view),
-        re_path(r'^', include(router.urls)),
+        path('', include(router.urls)),
     ]
 
 ### Schema path representations
